objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ACV_Employees_Involved_in_Visit__c</fullName>
        <label>ACV Employees Involved in Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Comments__c</fullName>
        <description>This provides a truncated (255char) view of the standard task description field&apos;s value</description>
        <label>Activity Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Appraisals__c</fullName>
        <description>The Actual Appraisals done as a result of the Live Appraisal event</description>
        <inlineHelpText>This is the actual number of appraisals that were completed during the event.</inlineHelpText>
        <label>Actual Appraisals at Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Cars_Sold__c</fullName>
        <description>Total number of cars that actually sold as a result of the live appraisal event.</description>
        <inlineHelpText>Total number of cars that actually sold as a result of the live appraisal event.</inlineHelpText>
        <label>Actual Cars Sold at Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <description>Shows the stage of an appointment set by IST and subsequent acknowledgement and confirmation by OST</description>
        <inlineHelpText>For appointments created by IST for OST</inlineHelpText>
        <label>Appointment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <label>Auction</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_On_Title_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true by Log_a_Call_Title_Case global action</description>
        <label>Call On Title Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <label>Call Script</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Competition - Digital</fullName>
                </value>
                <value>
                    <fullName>Competition - Physical</fullName>
                </value>
                <value>
                    <fullName>Competition - Local bid sale</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Cannot access Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Lot constraints</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date task was completed</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Attempt__c</fullName>
        <label>Contact Attempt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Attempt 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Made__c</fullName>
        <label>Contact Made?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <description>Profile ID of activity creator</description>
        <formula>$User.ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Partners__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Partners</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Partners</relationshipLabel>
        <relationshipName>Dealer_Partners_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <label>Delta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under 500</fullName>
                </value>
                <value>
                    <fullName>500-1000</fullName>
                </value>
                <value>
                    <fullName>1000-1500</fullName>
                </value>
                <value>
                    <fullName>Over 1500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_you_offer_an_incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did you offer an incentive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_you_seek_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did you seek feedback?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Items_Needed__c</fullName>
        <description>Documents that may be needed in order to complete the sale</description>
        <inlineHelpText>Documents that may be needed in order to complete the sale</inlineHelpText>
        <label>Documents/Items Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affidavit of Correction</fullName>
                </value>
                <value>
                    <fullName>Dealer Reassignment</fullName>
                </value>
                <value>
                    <fullName>Keys</fullName>
                </value>
                <value>
                    <fullName>License Plates</fullName>
                </value>
                <value>
                    <fullName>Lien Release</fullName>
                </value>
                <value>
                    <fullName>Marriage/Birth/Death Certificate</fullName>
                </value>
                <value>
                    <fullName>Odometer Statement</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Appraisals__c</fullName>
        <description>Filled out buy the field to indicate the expected number of appraisals they believe they will bring in from a Live Appraisal event.</description>
        <inlineHelpText>How many Vehicles do you expect to be Appraised at the event?</inlineHelpText>
        <label>Expected Appraisals at Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Waived_Buyer__c</fullName>
        <label>Fee Waived Buyer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Waived_Seller__c</fullName>
        <label>Fee Waived Seller</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>Used to log the follow up date on the related Title Case</description>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Inquiry_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is marked as true when a task is created from an Inquiry Comment</description>
        <label>From Inquiry Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Selected_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gong Selected Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Ops_Call_Reason__c</fullName>
        <description>Tracking the types of Ops issues that get overflowed to the BDR team</description>
        <inlineHelpText>If inbound call and operations related, please select the category of inquiry</inlineHelpText>
        <label>Inbound Ops Call Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Titles</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Resolutions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inquiry_Call_Bucket__c</fullName>
        <description>The Call Bucket of the parent customer inquiry of an inquiry comment. Logged on activity when an inquiry comment is created</description>
        <label>Inquiry Call Bucket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Call_Type__c</fullName>
        <description>The Call Type of the parent customer inquiry of an inquiry comment. Logged on activity when an inquiry comment is created</description>
        <label>Inquiry Call Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Status__c</fullName>
        <description>The status of the parent customer inquiry of an inquiry comment.  Logged on activity when an inquiry comment is created</description>
        <label>Inquiry Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Meeting_at_Conference__c</fullName>
        <label>Interested in Meeting at Conference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>Stores the Id of any record from legacy systems that is migrated to SFDC as an Activity.</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAXDigital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAXDigital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Meeting__c</fullName>
        <label>Next Scheduled Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Next steps taken after initial meeting with dealer</description>
        <label>Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Follow up needed in future</fullName>
                </value>
                <value>
                    <fullName>Follow up with operations</fullName>
                </value>
                <value>
                    <fullName>Management TO</fullName>
                </value>
                <value>
                    <fullName>Schedule retail</fullName>
                </value>
                <value>
                    <fullName>Schedule wholesale</fullName>
                </value>
                <value>
                    <fullName>No next steps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Workaround to get comments to show on open activity related lists on case</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other: Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Pitch_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary user associated to this activity other than the creating user.</description>
        <label>Primary Pitch Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_Comments__c</fullName>
        <label>Promotional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Pitch</fullName>
                </value>
                <value>
                    <fullName>Prospecting Stop</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>RSD Ride-along</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Live Appraisal event</fullName>
                </value>
                <value>
                    <fullName>Blitz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Title_Delay__c</fullName>
        <description>Field used to capture reason for delay of a title on log a call</description>
        <label>Reason For Title Delay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Delay</fullName>
                </value>
                <value>
                    <fullName>DMV Delay</fullName>
                </value>
                <value>
                    <fullName>Lack of Capital</fullName>
                </value>
                <value>
                    <fullName>Unable to Reach</fullName>
                </value>
                <value>
                    <fullName>Need Lien Release</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comments)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contact</fullName>
                </value>
                <value>
                    <fullName>Incorrect Paperwork</fullName>
                </value>
                <value>
                    <fullName>Payoff Delay</fullName>
                </value>
                <value>
                    <fullName>Closed/Limited in Office</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unwind</fullName>
                </value>
                <value>
                    <fullName>2nd lien on title. waiting to get released</fullName>
                    <isActive>false</isActive>
                    <label>2nd lien on title. waiting to get released</label>
                </value>
                <value>
                    <fullName>ACV Issue</fullName>
                    <isActive>false</isActive>
                    <label>ACV Issue</label>
                </value>
                <value>
                    <fullName>Customer</fullName>
                    <isActive>false</isActive>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>Customer/DMV Delay</fullName>
                    <isActive>false</isActive>
                    <label>Customer/DMV Delay</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <isActive>false</isActive>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Had titles, was waiting for guys to put a deal # on it</fullName>
                    <isActive>false</isActive>
                    <label>Had titles, was waiting for guys to put a deal # on it</label>
                </value>
                <value>
                    <fullName>Limited in office</fullName>
                    <isActive>false</isActive>
                    <label>Limited in office</label>
                </value>
                <value>
                    <fullName>Never got BOS</fullName>
                    <isActive>false</isActive>
                    <label>Never got BOS</label>
                </value>
                <value>
                    <fullName>Ordered duplicate</fullName>
                    <isActive>false</isActive>
                    <label>Ordered duplicate</label>
                </value>
                <value>
                    <fullName>Paid lien off on 5/6</fullName>
                    <isActive>false</isActive>
                    <label>Paid lien off on 5/6</label>
                </value>
                <value>
                    <fullName>Paid of 5/6 - waiting to receive</fullName>
                    <isActive>false</isActive>
                    <label>Paid of 5/6 - waiting to receive</label>
                </value>
                <value>
                    <fullName>Paid of Veros credit 4/28 - still waiting to receive</fullName>
                    <isActive>false</isActive>
                    <label>Paid of Veros credit 4/28 - still waiting to receive</label>
                </value>
                <value>
                    <fullName>Paid off lien but bank went out of business. they are trying to reach new bank.</fullName>
                    <isActive>false</isActive>
                    <label>Paid off lien but bank went out of business. they are trying to reach new bank.</label>
                </value>
                <value>
                    <fullName>Should&apos;ve been TA</fullName>
                    <isActive>false</isActive>
                    <label>Should&apos;ve been TA</label>
                </value>
                <value>
                    <fullName>Title cler on vacation</fullName>
                    <isActive>false</isActive>
                    <label>Title cler on vacation</label>
                </value>
                <value>
                    <fullName>Title sent to VIP by Mistake</fullName>
                    <isActive>false</isActive>
                    <label>Title sent to VIP by Mistake</label>
                </value>
                <value>
                    <fullName>Was Missing signature for lien sale paperwork</fullName>
                    <isActive>false</isActive>
                    <label>Was Missing signature for lien sale paperwork</label>
                </value>
                <value>
                    <fullName>Was waiting for bank</fullName>
                    <isActive>false</isActive>
                    <label>Was waiting for bank</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Outreach__c</fullName>
        <description>This field is to classify the reason for a call being logged on account, manually populated by users</description>
        <inlineHelpText>This field is to classify the reason for a call</inlineHelpText>
        <label>Reason for Outreach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aged Title</fullName>
                </value>
                <value>
                    <fullName>Dealer Documents</fullName>
                </value>
                <value>
                    <fullName>High Arbitration Status</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Pick Up</fullName>
                </value>
                <value>
                    <fullName>Late Load</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Titles Update</fullName>
                </value>
                <value>
                    <fullName>Call Campaign</fullName>
                </value>
                <value>
                    <fullName>Vendor Engagement</fullName>
                </value>
                <value>
                    <fullName>Ops NPS Follow Up</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Sales Pitch</fullName>
                </value>
                <value>
                    <fullName>Prospecting Stop</fullName>
                    <isActive>false</isActive>
                    <label>Prospecting Stop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Date the Document was received</description>
        <inlineHelpText>Date the Document was received</inlineHelpText>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the license was received as a result of the call</description>
        <inlineHelpText>Indicates that the license was received as a result of the call</inlineHelpText>
        <label>Received License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Resale_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the resale certificate was received as a result of the call</description>
        <inlineHelpText>Indicates that the resale certificate was received as a result of the call</inlineHelpText>
        <label>Received Resale Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refused_to_Provide_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dealer refused to return documents as a result of the call</description>
        <inlineHelpText>Dealer refused to return documents as a result of the call</inlineHelpText>
        <label>Refused to Provide Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows user to relate a case to log a call on account</description>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>CAP-408 - used by Capital for Activity Management</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Sent Email/Text</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Conversation</fullName>
                </value>
                <value>
                    <fullName>Interested in Application</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Needs Follow-up</fullName>
                    <isActive>false</isActive>
                    <label>Needs Follow-up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seller_Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in the Assignment Manager code to show VCIs where to go</description>
        <label>Seller Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title_ETA__c</fullName>
        <description>Estimated date for when title should be received</description>
        <inlineHelpText>Estimated date for when title should be received</inlineHelpText>
        <label>Title ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TrueFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TrueFrame Opportunity</description>
        <label>True360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Outreach__c</fullName>
        <description>Filled out by the users when entering log a call.</description>
        <label>Type of Outreach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wholesale_Buy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wholesale - Buy Opportunity</description>
        <label>Wholesale - Buy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wholesale_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wholesale - Sell Opportunity</description>
        <label>Wholesale - Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__WA_AdvRouteWaypoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the default lookup to associate the Advanced Route Waypoint</description>
        <label>Maps Advanced Route Waypoint</label>
        <referenceTo>maps__AdvRouteWaypoint__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Activities_completed_this_week</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>COMPLETED_DATE_TIME</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Activities completed this week</label>
    </listViews>
</CustomObject>